Change the name of the react modal class names set on the <SupportRequestModal/>. When a ticket is submitted and the support request modal is open, the toast now appears over the shadow that is applied on the rest of the page.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,7 +49,9 @@ body.ReactModal__Body--open > :not(.ReactModalPortal):not(.Toastify):not(.Toasti
 
 /* Prevent there from being a scroll to the Transfer to IT Modal */
 .ReactModal__Html--open,
-.ReactModal__Body--open {
+.ReactModal__Body--open,
+.support-request-modal-body--open
+{
     overflow: hidden;
 }
 
