--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,9 +39,11 @@ iframe {
 
 /* === TRANSFER TO IT MODAL === */
 
-body.support-request-modal-body--open #cvuhsd-sso-portal > :not(.support-request-modal):not(.Toastify):not(.Toastify__toast-container):not(.Toastify__toast) {
+body.support-request-modal-body--open #cvuhsd-sso-portal > :not(.support-request-modal):not(.Toastify):not(.Toastify__toast-container):not(.Toastify__toast),
+body.change-password-modal-body--open #cvuhsd-sso-portal > :not(.change-password-modal):not(.Toastify):not(.Toastify__toast-container):not(.Toastify__toast) {
     filter: blur(3px);
 }
+
 
 /* body.ReactModal__Body--open > div.transfer-to-it-modal {
     filter: blur(0px);
