Get the backgroud blur working for the View Requests Modal

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,7 +38,7 @@ iframe {
 }
 
 /* === TRANSFER TO IT MODAL === */
-
+body.view-requests-modal-body--open #cvuhsd-sso-portal > :not(.view-requests-modal):not(.Toastify):not(.Toastify__toast-container):not(.Toastify__toast),
 body.support-request-modal-body--open #cvuhsd-sso-portal > :not(.support-request-modal):not(.Toastify):not(.Toastify__toast-container):not(.Toastify__toast),
 body.change-password-modal-body--open #cvuhsd-sso-portal > :not(.change-password-modal):not(.Toastify):not(.Toastify__toast-container):not(.Toastify__toast) {
     filter: blur(3px);
@@ -52,6 +52,7 @@ body.change-password-modal-body--open #cvuhsd-sso-portal > :not(.change-password
 /* Prevent there from being a scroll to the Transfer to IT Modal */
 .ReactModal__Html--open,
 .ReactModal__Body--open,
+.view-requests-modal-body--open,
 .support-request-modal-body--open,
 .change-password-modal-body--open
 {
